--- a/public/main.css
+++ b/public/main.css
@@ -48,8 +48,8 @@ div.box {
 
 div.win-or-giveup {
     display: flex;
-    width: 100%;
-    margin: 50px auto;
+    width: 80%;
+    margin: 50px 0;
     justify-content: space-evenly;
 }
 
@@ -76,6 +76,7 @@ div.win-or-giveup {
 
     h2 {
         font-size: 30px;
+        margin-bottom: 50px;
     }
 
     div.game-container {
@@ -88,6 +89,6 @@ div.win-or-giveup {
     div.win-or-giveup {
         display: flex;
         width: 100%;
-        margin: 50px 10px;
+        margin: 50px 0;
     }
 }
