--- a/public/main.css
+++ b/public/main.css
@@ -68,6 +68,30 @@ div.win-or-giveup {
     cursor: pointer;
 }
 
+@media only screen and (max-device-width: 1900px) {
+    body {
+        font-size: 90px;
+    }
+
+    h2 {
+        font-size: 50px;
+        margin-bottom: 50px;
+    }
+
+    div.game-container {
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(3, 180px);
+        grid-template-rows: repeat(3, 180px);
+    }
+
+    div.win-or-giveup {
+        display: flex;
+        width: 100%;
+        margin: 30px 0;
+    }
+}
+
 @media only screen and (max-device-width: 1200px) {
     body {
         font-size: 90px;
@@ -88,6 +112,6 @@ div.win-or-giveup {
     div.win-or-giveup {
         display: flex;
         width: 100%;
-        margin: 50px 0;
+        margin: 50px auto;
     }
 }
